Npgsql.dllを2.0.8にアップデート リソースファイルのパスを修正

--- a/AipoReminder/Properties/Resources.resx
+++ b/AipoReminder/Properties/Resources.resx
@@ -131,9 +131,9 @@
     <value>..\favicon-16-red.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="information_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\information2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\information_blue.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="information_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\information3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\information_orange.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
